--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@crownframework/svelte-error-boundary": "^1.0.3",
+    "aws-sdk": "^2.1320.0",
     "svelte": "^3.49.0"
   },
   "devDependencies": {
